@@ -12,6 +12,72 @@ Windows:    %APPDATA%\brandyrc
 UNIX/Linux: $HOME/.brandyrc
 
 These are:
+bitshift64              This controls whether Brandy calculates bit shifts
+                        in 64-bit space. 32-bit space is used when disabled
+                        as per ARM BBC BASIC V/VI.
+
+fullscreen              (SDL build only) Start Brandy in fullscreen mode.
+
+hex64                   Equivalent to SYS "Brandy_Hex64",1.
+                        This controls whether Brandy renders and interprets
+                        Base 16 (Hexadecimal) values as 64-bit.
+
+ignore                  (If strict mode enabled by default) Ignore certain
+                        'unsupported feature' errors.
+                        This option allows some unsupported features that do
+                        not affect the basic running of the program to be
+                        ignored.
+
+intusesfloat            Equivalent to SYS"Brandy_INTusesFloat",1.
+                        This enables a BB4W/BBCSDL extension that allows INT()
+                        to handle numbers > 2^31-1 by using a float if the
+                        number is out of range for a 32-bit signed integer.
+
+legacyintmaths          Equivalent to SYS "Brandy_LegacyIntMaths",1.
+                        This allows integer mathematics to be handled in the
+                        way BBC BASIC 1 to 4 on the Acorn 8-bit machines, and
+                        RISC OS ARM BBC BASIC V, including the rather
+                        questionable wrap-around on integers. RISC OS ARM BBC
+                        BASIC VI, BB4W and BBCSDL do not have this wrap-around
+                        issue and will promote to float when needed.
+
+lib <filename>          Load Basic library <filename> when the interpreter
+                        starts. This option can be repeated as many times as
+                        required to load a number of libraries. This is
+                        equivalent to typing 'INSTALL <filename>' at the
+                        interpreter's command line. The libraries are loaded
+                        in the order given on the command line. Note that the
+                        search order is the reverse of this.
+
+listo                   Default LISTO options value. Default is 0.
+
+lowercase               Allow use of lower-case keywords. Unless LISTO option
+                        bit 4 (16) is set, LIST will show keywords in
+                        uppercase. SAVE will always save keywords in uppercase.
+
+nocheck                 Don't try to check for new versions of Brandy on
+                        interactive mode startup.  This is perhaps useful if
+                        you have a slow internet connection that causes Brandy
+                        to hang for a few seconds on startup as it tries to
+                        check for a new version.
+
+nofull                  (SDL build only) Never use fullscreen mode.
+
+nostar                  Do not check commands issued via OSCLI to see if they
+                        are dealt with by Brandy. Pass all commands to the
+                        underlying operating system.
+
+path <directory list>   This specifies a list of directories that the
+                        interpreter will search when looking for libraries and
+                        programs. The directory names are separated by commas.
+                        The pseudo-variable 'FILEPATH$' is set to this value.
+                        See the section below on FILEPATH$ for more details.
+
+pseudovarsunsigned      Equivalent to SYS "Brandy_PseudovarsUnsigned",1.
+                        Only effective on 32-bit hardware. Toggles whether
+                        memory pseudo-variables (e.g. PAGE, HIMEM etc) return
+                        large positive numbers above &7FFFFFFF.
+
 size <size>             Set the size of the Basic workspace to <size> bytes
                         when starting the interpreter.  The minimum size
                         allowed is 16384 bytes and anything below this value
@@ -23,47 +89,9 @@ size <size>             Set the size of the Basic workspace to <size> bytes
                         100 kilobytes (102400 bytes) and '-size 8m' will set
                         it to eight megabytes (8388608 bytes).
 
-nocheck                 Don't try to check for new versions of Brandy on
-                        interactive mode startup.  This is perhaps useful if
-                        you have a slow internet connection that causes Brandy
-                        to hang for a few seconds on startup as it tries to
-                        check for a new version.
-
-fullscreen              (SDL build only) Start Brandy in fullscreen mode.
-
-nofull                  (SDL build only) Never use fullscreen mode.
-
-swsurface               (SDL build only) Use a software SDL surface.
-
-zoom <amount>           (SDL build only) Zoom the display window by integer
-                        <amount>, in the range 1-4.
-
-tek                     (Text-mode 'tbrandy' build only) Enable Tektronics
-                        graphics.
-
 startupmode <mode>      (SDL build only) Sets the start-up screen mode.
                         Any built-in mode can be selected by its mode number.
                         (See ScreenModes.txt)
-
-path <directory list>   This specifies a list of directories that the
-                        interpreter will search when looking for libraries and
-                        programs. The directory names are separated by commas.
-                        The pseudo-variable 'FILEPATH$' is set to this value.
-                        See the section below on FILEPATH$ for more details.
-
-lib <filename>          Load Basic library <filename> when the interpreter
-                        starts. This option can be repeated as many times as
-                        required to load a number of libraries. This is
-                        equivalent to typing 'INSTALL <filename>' at the
-                        interpreter's command line. The libraries are loaded
-                        in the order given on the command line. Note that the
-                        search order is the reverse of this.
-
-ignore                  (If strict mode enabled by default) Ignore certain
-                        'unsupported feature' errors.
-                        This option allows some unsupported features that do
-                        not affect the basic running of the program to be
-                        ignored.
 
 strict                  (If ignore mode enabled by default) The interpreter
                         will report an error whenever it comes across a
@@ -71,39 +99,13 @@ strict                  (If ignore mode enabled by default) The interpreter
                         some obvious BASIC program bugs that are ignored by
                         the Acorn interpreter.
 
-lowercase               Allow use of lower-case keywords. Unless LISTO option
-                        is set, LIST will show keywords in uppercase. SAVE
-                        will always save keywords in uppercase.
+swsurface               (SDL build only) Use a software SDL surface.
 
-nostar                  Do not check commands issued via OSCLI to see if they
-                        are dealt with by Brandy. Pass all commands to the
-                        underlying operating system.
+tek                     (Text-mode 'tbrandy' build only) Enable Tektronics
+                        graphics.
 
-hex64                   Equivalent to SYS"Brandy_Hex64",1.
-                        This controls whether Brandy renders and interprets
-                        Base 16 (Hexadecimal) values as 64-bit.
-
-bitshift64              This controls whether Brandy calculates bit shifts
-                        in 64-bit space. 32-bit space is used when disabled
-                        as per ARM BBC BASIC V/VI.
-
-intusesfloat            Equivalent to SYS"Brandy_INTusesFloat",1.
-                        This enables a BB4W/BBCSDL extension that allows INT()
-                        to handle numbers > 2^31-1 by using a float if the
-                        number is out of range for a 32-bit signed integer.
-
-legacyintmaths          Equivalent to SYS"Brandy_LegacyIntMaths",1.
-                        This allows integer mathematics to be handled in the
-                        way BBC BASIC 1 to 4 on the Acorn 8-bit machines, and
-                        RISC OS ARM BBC BASIC V, including the rather
-                        questionable wrap-around on integers. RISC OS ARM BBC
-                        BASIC VI, BB4W and BBCSDL do not have this wrap-around
-                        issue and will promote to float when needed.
-
-pseudovarsunsigned      Equivalent to SYS"Brandy_PseudovarsUnsigned",1.
-                        Only effective on 32-bit hardware. Toggles whether
-                        memory pseudo-variables (e.g. PAGE, HIMEM etc) return
-                        large positive numbers above &7FFFFFFF.
+zoom <amount>           (SDL build only) Zoom the display window by integer
+                        <amount>, in the range 1-4.
 
 Each option is to be listed on its own line.
 
