@@ -10,6 +10,7 @@ inappropriate by distribution packagers, so 1.23.3 adds build option
 -DBRANDY_NOVERCHECK to disable this.
 
 * 1.23.7 - 
+- System: Addd a config file option for default LISTO value.
 - Graphics: Fix a regression involving horizontal line drawing - thank you
   Richard Russell!
 
